# fast_zero

./: .gitignore  database.db  pyproject.toml
fast_zero/: app.py  models.py  schemas.py
migrations/versions/: 6381a62cd8cc_create_users_table.py  f3bca69541a1_exercicio_02_aula_04.py
tests/: conftest.py  test_app.py  test_db.py
